--- a/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
+++ b/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
@@ -17,26 +17,26 @@ Library Manager: ArmAr.exe V6.11
 Hex Converter:   FromElf.exe V6.11
 CPU DLL:         SARMCM3.DLL V5.27.0.0
 Dialog DLL:      DCM.DLL V1.17.2.0
-Target DLL:      Segger\JL2CM3.dll V2.99.34.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.5.0
 Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
-D:\project\foc\MCU_Develop\simplefoc11_stm32f103_pos_close_with_current\MDK-ARM\simplefoc_stm32f103.uvprojx
-Project File Date:  05/04/2025
+D:\github\stm32Foc\MDK-ARM\simplefoc_stm32f103.uvprojx
+Project File Date:  06/22/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.11', folder: 'D:\keil\keil5\ARM\ARMCLANG\Bin'
 Rebuild target 'simplefoc_stm32f103'
 assembling startup_stm32f103xb.s...
-compiling stm32f1xx_it.c...
 compiling gpio.c...
-compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling tim.c...
 compiling usart.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_it.c...
 compiling main.c...
-compiling adc.c...
 compiling i2c.c...
+compiling adc.c...
+compiling tim.c...
 compiling stm32f1xx_hal_adc.c...
 compiling stm32f1xx_hal_adc_ex.c...
 compiling stm32f1xx_hal.c...
@@ -44,34 +44,34 @@ compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_flash_ex.c...
 compiling stm32f1xx_hal_exti.c...
 compiling system_stm32f1xx.c...
 compiling SEGGER_RTT_printf.c...
+compiling lowpass_filter.cpp...
 compiling SEGGER_RTT.c...
 compiling stm32f1xx_hal_tim_ex.c...
-compiling foc_utils.cpp...
-compiling lowpass_filter.cpp...
 compiling time_utils.cpp...
-compiling stm32f1xx_hal_uart.c...
 compiling pid.cpp...
+compiling foc_utils.cpp...
+compiling stm32f1xx_hal_uart.c...
 compiling CurrentSense.cpp...
-compiling stm32f1xx_hal_tim.c...
 compiling FOCMotor.cpp...
+compiling stm32f1xx_hal_tim.c...
 compiling stm32f1xx_hal_i2c.c...
+compiling dwt_timer.c...
 compiling Sensor.cpp...
 compiling AS5600_I2C.cpp...
-compiling BLDCDriver3PWM.cpp...
-compiling dwt_timer.c...
-compiling InlineCurrentSense.cpp...
-compiling bsp_pwm.c...
 compiling user_main.cpp...
+compiling BLDCDriver3PWM.cpp...
+compiling bsp_pwm.c...
+compiling InlineCurrentSense.cpp...
 compiling BLDCMotor.cpp...
 linking...
-Program Size: Code=32564 RO-data=880 RW-data=248 ZI-data=5936  
+Program Size: Code=32608 RO-data=880 RW-data=248 ZI-data=5936  
 FromELF: creating hex file...
 "simplefoc_stm32f103\simplefoc_stm32f103.axf" - 0 Error(s), 0 Warning(s).
 
@@ -96,7 +96,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.1.0
-Build Time Elapsed:  00:00:06
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
